--- a/.github/workflows/TestReleaseAndPublish.yml
+++ b/.github/workflows/TestReleaseAndPublish.yml
@@ -1,8 +1,9 @@
 
-name: Test, Tag, Release, and Publish
+name: Analyze, Test, Tag, and Publish
 on: 
-  workflow_dispatch: 
   push: 
+  pull_request: 
+  workflow_dispatch: 
 jobs: 
   PowerShellStaticAnalysis: 
     runs-on: ubuntu-latest
@@ -192,21 +193,6 @@ jobs:
           name: PesterResults
           path: '**.TestResults.xml'
         if: ${{always()}}
-  BuildPSMetrics: 
-    runs-on: ubuntu-latest
-    if: ${{ success() }}
-    steps: 
-      - name: Check out repository
-        uses: actions/checkout@v2
-      - name: Use PSSVG Action
-        uses: StartAutomating/PSSVG@main
-        id: PSSVG
-      - name: BuildPipeScript
-        uses: StartAutomating/PipeScript@main
-      - name: UseEZOut
-        uses: StartAutomating/EZOut@master
-      - name: UseHelpOut
-        uses: StartAutomating/HelpOut@master
   TagReleaseAndPublish: 
     runs-on: ubuntu-latest
     if: ${{ success() }}
@@ -584,4 +570,32 @@ jobs:
               }
           }
           } @Parameters
+  BuildPSMetrics: 
+    runs-on: ubuntu-latest
+    if: ${{ success() }}
+    steps: 
+      - name: Check out repository
+        uses: actions/checkout@v2
+      - name: GitLogger
+        uses: GitLogging/GitLoggerAction@main
+        id: GitLogger
+      - name: Use PSSVG Action
+        uses: StartAutomating/PSSVG@main
+        id: PSSVG
+      - name: UsePiecemeal
+        uses: StartAutomating/Piecemeal@main
+      - name: BuildPipeScript
+        uses: StartAutomating/PipeScript@main
+      - name: UseEZOut
+        uses: StartAutomating/EZOut@master
+      - name: UseHelpOut
+        uses: StartAutomating/HelpOut@master
+      - name: Run PSMetrics (from main)
+        if: ${{github.ref_name == 'main'}}
+        uses: StartAutomating/PSMetrics@main
+        id: PSMetricsMain
+      - name: Run PSMetrics (on branch)
+        if: ${{github.ref_name != 'main'}}
+        uses: ./
+        id: PSMetricsBranch
 
